remove recommended content on end screen + add readme file that just holds the store info

--- a/"No Distractions" for YouTube Extension/style.css
+++ b/"No Distractions" for YouTube Extension/style.css
@@ -14,3 +14,8 @@ ytd-browse[page-subtype="home"] {
 ytd-guide-entry-renderer a[title="Trending"]{
     display: none !important;
 }
+
+
+.ytp-endscreen-content {
+    display: none !important;
+}
