simplify instructions for turning on

--- a/Shared (App)/Resources/Style.css
+++ b/Shared (App)/Resources/Style.css
@@ -65,6 +65,18 @@ button {
     height: 150px;
 }
 
+.column {
+  float: left;
+  width: 48%;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 /* iPhone */
 @media only screen and (max-device-width: 428px) {
     .platform-ipad {
@@ -73,23 +85,40 @@ button {
     
     p {
         font-size: 2em;
+        margin-bottom: 3vw;
+        padding: 0;
     }
     
-    .iphone-illustration-image {
-        margin-top: 50px;
-        height: 50vh;
+    * {
+      box-sizing: border-box;
+    }
+    
+    .column img {
+        width: 45vw;
+        padding: 20px;
     }
 
 }
+
 
 
 @media only screen and (min-device-width: 429px) and (max-device-width: 1024px) {
     .platform-iphone {
         display: none;
     }
-}
-
-.illustration-image-ipad {
-    width: 60vw;
-    margin-top: 20px;
+    
+    .column img {
+        width: 43vw;
+        padding: 20px;
+    }
+    
+    p {
+        font-size: 1.3em;
+        margin-bottom: 0.5vw;
+        padding: 0;
+    }
+    
+    .app-icon {
+        height: 50px;
+    }
 }
