--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -1,4 +1,5 @@
-/***** hide videos on home page *****/
+/***** home page *****/
+/** hide videos **/
 /* desktop version */
 ytd-browse[page-subtype="home"] {
     visibility: hidden;
@@ -6,6 +7,12 @@ ytd-browse[page-subtype="home"] {
 /* mobile version */
 div[tab-identifier="FEwhat_to_watch"]{
     visibility: hidden;
+}
+
+/** hide shorts **/
+#items ytd-guide-entry-renderer:nth-child(3),
+ytd-mini-guide-entry-renderer[aria-label="Shorts"] {
+    display: none;
 }
 
 /***** hide related videos when you watch a video *****/
