--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -10,8 +10,14 @@ div[tab-identifier="FEwhat_to_watch"]{
 }
 
 /** hide shorts **/
+/* desktop version */
 #items ytd-guide-entry-renderer:nth-child(3),
 ytd-mini-guide-entry-renderer[aria-label="Shorts"] {
+    display: none;
+}
+
+/* mobile version */
+ytm-pivot-bar-renderer[role="tablist"] ytm-pivot-bar-item-renderer:nth-child(2){
     display: none;
 }
 
