only hide comments under the videos, not on the community page

--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -33,7 +33,7 @@ ytm-item-section-renderer[section-identifier="related-items"] {
 }
 
 /***** hide comment ********/
-ytd-comments {
+#comments {
     visibility: hidden;
 }
 
