cosmetic fix of the shorts button

--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -18,7 +18,7 @@ ytd-mini-guide-entry-renderer[aria-label="Shorts"] {
 
 /* mobile version */
 ytm-pivot-bar-renderer[role="tablist"] ytm-pivot-bar-item-renderer:nth-child(2){
-    display: none;
+    visibility: hidden;
 }
 
 /***** hide related videos when you watch a video *****/
