more accurate subscriptions selector

--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -42,6 +42,13 @@ body {
 }
 
 /******* HIDE IRRELEVANT TOGGLES *******/
+@media only screen and (max-device-width: 1312px) {
+    .youtube-large-only {
+        display:none
+    }
+}
+
+
 /* iPhone */
 @media only screen and (max-device-width: 768px) {
     .platform-ipad-mac {
@@ -65,3 +72,4 @@ body {
 a:visited {
     color: blue;
 }
+
