--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -12,10 +12,16 @@ body {
 
 .smaller-font {
     font-size: 0.85em;
+    text-align: left;
 }
 
-.a-toggle,
 .save-toggle {
+    text-align: center;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.a-toggle {
     margin-bottom: 5px;
     text-align: left;
 }
@@ -88,4 +94,83 @@ a:visited {
     font-size: 0.9em;
     font-weight: bold;
     margin-top: 8px;
+}
+
+
+
+
+
+
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+    position: absolute;
+    left: 0;
+    opacity: 0.01;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+    position: relative;
+    padding-left: 24px;
+    line-height: 1.4;
+    cursor: pointer;
+    font-size: 16px
+}
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #aaa;
+    background: #FFF;
+    border-radius: .2em;
+    box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 rgba(203, 34, 237, .2);
+    -webkit-transition: all .275s;
+            transition: all .275s;
+}
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+    content: '\01F6AB';
+    position: absolute;
+    top: 9px;
+    left: 0px;
+    font-size: 12px;
+    color: #CB22ED;
+    line-height: 0;
+    -webkit-transition: all .1s;
+            transition: all .1s;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0) rotate(45deg);
+            transform: scale(0) rotate(45deg);
+}
+[type="checkbox"]:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1) rotate(0);
+            transform: scale(1) rotate(0);
+}
+/* Disabled checkbox */
+[type="checkbox"]:disabled:not(:checked) + label:before,
+[type="checkbox"]:disabled:checked + label:before {
+    box-shadow: none;
+    border-color: #bbb;
+    background-color: #e9e9e9;
+}
+[type="checkbox"]:disabled:checked + label:after {
+    color: #777;
+}
+[type="checkbox"]:disabled + label {
+    color: #aaa;
+}
+/* Accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+    box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 6px rgba(203, 34, 237, .2);
 }
