--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -21,9 +21,14 @@ ytd-browse[page-subtype="home"] { visibility: hidden; } div[tab-identifier="FEwh
 ytm-promoted-sparkles-text-search-renderer,
 ytd-promoted-sparkles-text-search-renderer,
 ytd-promoted-sparkles-web-renderer,
-ytd-carousel-ad-renderer {
+ytd-carousel-ad-renderer,
+ytd-ad-slot-renderer {
     display: none !important;
 }
+
+#masthead-ad { display: none; } /* display: flex; */
+
+ytd-ad-slot-renderer { display: none; } /* display: inline; */
 
 /* hide the ads on a video page */
 ytm-promoted-sparkles-web-renderer, ytm-companion-ad-renderer, #player-ads {
