--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -41,6 +41,10 @@ body {
     font-size: 1.1em;
     margin: 0px 0px 5px 0px;
 }
+.toggle-group h3 {
+    font-size: 1em;
+    margin: 10px 0px 5px 0px;
+}
 
 @media (prefers-color-scheme: dark) {
     /* Dark Mode styles go here. */
