--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -106,14 +106,14 @@ a:visited {
 
 /******  make the checkboxes use 'prohibited' symbols   ******/
 /* Base for label styling */
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
+.hide-checkboxes [type="checkbox"]:not(:checked),
+.hide-checkboxes [type="checkbox"]:checked {
     position: absolute;
     left: 0;
     opacity: 0.01;
 }
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
+.hide-checkboxes [type="checkbox"]:not(:checked) + label,
+.hide-checkboxes [type="checkbox"]:checked + label {
     position: relative;
     padding-left: 24px;
     line-height: 1.4;
@@ -121,8 +121,8 @@ a:visited {
     font-size: 16px
 }
 /* checkbox aspect */
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
+.hide-checkboxes [type="checkbox"]:not(:checked) + label:before,
+.hide-checkboxes [type="checkbox"]:checked + label:before {
     content: '';
     position: absolute;
     left: 0;
@@ -137,8 +137,8 @@ a:visited {
             transition: all .275s;
 }
 /* checked mark aspect */
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
+.hide-checkboxes [type="checkbox"]:not(:checked) + label:after,
+.hide-checkboxes [type="checkbox"]:checked + label:after {
     content: '\01F6AB';
     position: absolute;
     top: 9px;
@@ -150,31 +150,88 @@ a:visited {
             transition: all .1s;
 }
 /* checked mark aspect changes */
-[type="checkbox"]:not(:checked) + label:after {
+.hide-checkboxes [type="checkbox"]:not(:checked) + label:after {
     opacity: 0;
     -webkit-transform: scale(0) rotate(45deg);
             transform: scale(0) rotate(45deg);
 }
-[type="checkbox"]:checked + label:after {
+.hide-checkboxes [type="checkbox"]:checked + label:after {
     opacity: 1;
     -webkit-transform: scale(1) rotate(0);
             transform: scale(1) rotate(0);
 }
 /* Disabled checkbox */
-[type="checkbox"]:disabled:not(:checked) + label:before,
-[type="checkbox"]:disabled:checked + label:before {
+.hide-checkboxes [type="checkbox"]:disabled:not(:checked) + label:before,
+.hide-checkboxes [type="checkbox"]:disabled:checked + label:before {
     box-shadow: none;
     border-color: #bbb;
     background-color: #e9e9e9;
 }
-[type="checkbox"]:disabled:checked + label:after {
+.hide-checkboxes [type="checkbox"]:disabled:checked + label:after {
     color: #777;
 }
-[type="checkbox"]:disabled + label {
+.hide-checkboxes [type="checkbox"]:disabled + label {
     color: #aaa;
 }
 /* Accessibility */
-[type="checkbox"]:checked:focus + label:before,
-[type="checkbox"]:not(:checked):focus + label:before {
+.hide-checkboxes [type="checkbox"]:checked:focus + label:before,
+.hide-checkboxes [type="checkbox"]:not(:checked):focus + label:before {
     box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 6px rgba(203, 34, 237, .2);
+}
+
+
+/* style the message box */
+#message-box {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2em;
+      font-weight: bold;
+    }
+
+
+#waitTime {
+    width: 50px;
+}
+.friction-customisation {
+    font-size: 0.9em;
+    font-style: italic;
+}
+.friction-toggle {
+    margin-bottom: 10px;
+}
+#delay-message {
+    font-size: 1.8em;
+    line-height: 140%;
+    font-style: italic;
+    margin: 20px 20px 10px 20px;
+}
+
+.delay-time-wrapper {
+    color: gray;
+}
+
+@keyframes breathe {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+
+
+.breathing {
+  animation-name: breathe;
+  animation-duration: 6s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+#delay-content img {
+    width: 50%;
+    margin-bottom: 30px;
 }
