--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -232,6 +232,15 @@ a:visited {
 }
 
 #delay-content img {
-    width: 50%;
+    width: 70%;
     margin-bottom: 30px;
+}
+
+#delay-content {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+#delay-content.show {
+  opacity: 1;
 }
