--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -46,13 +46,6 @@ body {
     margin: 10px 0px 5px 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-    /* Dark Mode styles go here. */
-    .colored-font {
-        color: lightgray;
-    }
-}
-
 /******* HIDE IRRELEVANT TOGGLES *******/
 @media only screen and (max-device-width: 1312px) {
     .youtube-large-only {
@@ -243,4 +236,17 @@ a:visited {
 
 #delay-content.show {
   opacity: 1;
+}
+
+
+@media (prefers-color-scheme: dark) {
+    /* Dark Mode styles go here. */
+    .colored-font {
+        color: lightgray;
+    }
+    
+    #delay-content img {
+        filter: invert(100%) sepia(0%) saturate(7399%) hue-rotate(180deg) brightness(112%) contrast(80%);
+    }
+    
 }
