make sure recommended videos don't flash on the screen before being hidden

--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -1,3 +1,7 @@
+/* hide recommended videos by default, so that they don't flash on the screen before they are hidden*/
+ytd-browse[page-subtype="home"] { visibility: hidden; }
+div[tab-identifier="FEwhat_to_watch"] { visibility: hidden; }
+
 /* hide suggested videos popping up on end screen */
 .ytp-endscreen-content {
     display: none !important;
